tests/semantic/pass/struct_pointer_access.c
int main() {
  struct S* a;
  struct S {int x;};
  (*a).x = 3;
}
