tests/semantic/fail/selection_statement_nonscalar_controlling_expression.c
int main(void) {
  struct S {int i;} s;
  if (s) {
    return 0;
  }
}
